<resources>
    <string name="app_name">Mbichwa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_text">Create</string>
    <string name="account_text">Account</string>
    <string name="name_hint_text">Name</string>
    <string name="phone_number_hint_text">Phone Number</string>
    <string name="email_address_hint_text">Email Address</string>
    <string name="next_text">Next</string>
    <string name="password_hint_text">Password</string>
    <string name="confirm_password_hint_text">Confirm Password</string>
    <string name="done_text">Done</string>
    <string name="favourite_icon_title">Favourite</string>
    <string name="search_item_title_text">Search</string>
    <string name="gummies_in_space_text">Gummies in space</string>
    <string name="price_example_text">$19.84</string>
    <string name="price_total_example_text">$39.68</string>
    <string name="_1_packet_text">1 Packet</string>
    <string name="total_text">Total</string>
    <string name="Image_view_description_for_display_images">ImageView for the product display Image items</string>
    <string name="checkout_text">Checkout</string>
    <string name="delivery_location_text">Delivery Location</string>
    <string name="payment_method_text">Payment Method</string>
    <string name="subtotal_text">Subtotal</string>
    <string name="shipping_text">Shipping</string>
    <string name="view_cart_text">View Cart \u2192</string>
    <string name="cart_text">Cart</string>
    <string name="place_order_text">Place Order</string>
    <string name="location_not_set_text">Delivery location not set</string>
</resources>
